code/force-app/main/default/objects/Bond_Transaction__c/Bond_Transaction__c.object-meta.xml
<CustomObject>
    <label>自營債交易</label>
    <nameField>
        <label>債券名稱</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>