code/force-app/main/default/objects/Bond_Transaction__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>客戶</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>自營債交易</relationshipLabel>
    <relationshipName>Bond_Transaction</relationshipName>
    <type>Lookup</type>
</CustomField>