code/force-app/main/default/objects/Bond_Transaction__c/fields/Account_Private_Info__c.field-meta.xml
<CustomField>
    <fullName>Account_Private_Info__c</fullName>
    <label>客戶非公開資訊</label>
    <referenceTo>Account_Private_Info__c</referenceTo>
    <relationshipLabel>自營債交易</relationshipLabel>
    <relationshipName>Bond_Transaction</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>