code/force-app/main/default/objects/Bond_Transaction__c/fields/Accrued_Interest__c.field-meta.xml
<CustomField>
    <fullName>Accrued_Interest__c</fullName>
    <label>債券前手息</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>