code/force-app/main/default/objects/Bond_Transaction__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <label>金額</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>