code/force-app/main/default/objects/Bond_Transaction__c/fields/Bond_Face_Value__c.field-meta.xml
<CustomField>
    <fullName>Bond_Face_Value__c</fullName>
    <label>債券面額</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>