code/force-app/main/default/objects/Bond_Transaction__c/fields/Bond_Transaction_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Bond_Transaction_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>自營債交易外鍵</label>
    <length>200</length>
    <type>Text</type>
</CustomField>