code/force-app/main/default/objects/Bond_Transaction__c/fields/Buy_Sell__c.field-meta.xml
<CustomField>
    <fullName>Buy_Sell__c</fullName>
    <label>買入/賣出</label>
    <length>10</length>
    <type>Text</type>
</CustomField>