code/force-app/main/default/objects/Bond_Transaction__c/fields/Buy_Sell_Amount__c.field-meta.xml
<CustomField>
    <fullName>Buy_Sell_Amount__c</fullName>
    <label>買賣金額</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>