code/force-app/main/default/objects/Bond_Transaction__c/fields/In_Transit_Note__c.field-meta.xml
<CustomField>
    <fullName>In_Transit_Note__c</fullName>
    <label>在途註記</label>
    <length>100</length>
    <type>Text</type>
</CustomField>