code/force-app/main/default/objects/Bond_Transaction__c/fields/Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>Issue_Date__c</fullName>
    <label>發放日</label>
    <type>Date</type>
</CustomField>