code/force-app/main/default/objects/Bond_Transaction__c/fields/Remarks__c.field-meta.xml
<CustomField>
    <fullName>Remarks__c</fullName>
    <label>備註</label>
    <length>100</length>
    <type>Text</type>
</CustomField>