code/force-app/main/default/objects/Bond_Transaction__c/fields/Settlement_Date__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Date__c</fullName>
    <label>交割日</label>
    <type>Date</type>
</CustomField>