code/force-app/main/default/objects/Bond_Transaction__c/fields/Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Date__c</fullName>
    <label>交易日</label>
    <type>Date</type>
</CustomField>