code/force-app/main/default/objects/Bond_Transaction__c/fields/Transaction_Price_Ex_Coupon_Price__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Price_Ex_Coupon_Price__c</fullName>
    <label>成交價格(除息價)</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>