code/force-app/main/default/objects/Bond_Transaction__c/fields/Transfer_In_Out__c.field-meta.xml
<CustomField>
    <fullName>Transfer_In_Out__c</fullName>
    <label>轉入/轉出</label>
    <length>10</length>
    <type>Text</type>
</CustomField>