code/force-app/main/default/objects/Bond_Transaction__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>類型</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>買賣</fullName>
            </value>
            <value>
                <fullName>移券</fullName>
            </value>
            <value>
                <fullName>配息</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>