code/force-app/main/default/objects/Bond_Transaction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Bond_Code_ISIN__c</columns>
    <columns>Transaction_Date__c</columns>
    <columns>Issue_Date__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>Buy_Sell_Amount__c</columns>
    <columns>Transaction_Amount__c</columns>
    <columns>Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>