code/force-app/main/default/objects/Bond_Transaction__c/listViews/Bond_Interest.listView-meta.xml
<ListView>
    <fullName>Bond_Interest</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Bond_Code_ISIN__c</columns>
    <columns>Issue_Date__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>配息</value>
    </filters>
    <label>自營債-配息明細</label>
</ListView>