code/force-app/main/default/objects/Bond_Transaction__c/listViews/Bond_Move.listView-meta.xml
<ListView>
    <fullName>Bond_Move</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Bond_Code_ISIN__c</columns>
    <columns>Transaction_Date__c</columns>
    <columns>Transfer_In_Out__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>Bond_Face_Value__c</columns>
    <columns>Transaction_Amount__c</columns>
    <columns>Remarks__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>移券</value>
    </filters>
    <label>自營債-移券明細</label>
</ListView>